Fix admin page redirects in netlify.toml

--- a/untitled/secret-login-2025.html
+++ b/untitled/secret-login-2025.html
@@ -164,7 +164,7 @@
                 sessionStorage.setItem('adminLoginTime', Date.now().toString());
                 
                 // Redirect to admin panel
-                window.location.href = 'admin.html';
+                window.location.href = 'secret-portfolio-admin-2025.html';
             } else {
                 // Show error message
                 errorMessage.style.display = 'block';
