--- a/untitled/secret-portfolio-admin-2025.html
+++ b/untitled/secret-portfolio-admin-2025.html
@@ -24,7 +24,7 @@
                 sessionStorage.removeItem('adminLoginTime');
                 
                 // Redirect to login page
-                window.location.href = 'admin-login.html';
+                window.location.href = 'secret-login-2025.html';
                 return;
             }
         })();
